# qualiphide_fir_hp_inference

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  run_inference.py
configs/: config.yaml
docs/: PUBLISHING.md  paper_citation.bib
notebooks/: coverage.ipynb  tutorial.ipynb
notebooks/data/: bins.csv  lower_bound_1s.csv  lower_bound_2s.csv  median_stairs.csv  upper_bound_1s.csv  upper_bound_2s.csv
qualiphide/: __init__.py  cli.py  config.py  coverage.py  discovery.py  likelihood.py  minimization.py  pipeline.py  sensitivity.py  signal.py  toymc.py
qualiphide/data/: resolution_model_20260211.csv  sr3pt2_bkg_channels_Hz_meV_remade.csv  total_efficiency_sr3pt2.csv
qualiphide/preprocessing/: background.py  efficiency.py  rates.py
results/: discovery_thresholds.csv  sensitivity_band.csv  three_sigma_discovery.csv
