[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualiphide"
version = "0.1.0"
description = "Profile-likelihood inference for the QUALIPHIDE FIR hidden-photon search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Jacob Harris"},
    {name = "Lanqing Yuan"},
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "iminuit>=2.0",
    "matplotlib>=3.4",
    "pyyaml>=5.4",
    "numba>=0.56",
    "tqdm>=4.60",
]

[project.optional-dependencies]
notebook = ["jupyter", "ipykernel"]

[project.urls]
Homepage = "https://github.com/WashU-Astroparticle-Lab/qualiphide_fir_hp_inference"
Repository = "https://github.com/WashU-Astroparticle-Lab/qualiphide_fir_hp_inference"
Documentation = "https://github.com/WashU-Astroparticle-Lab/qualiphide_fir_hp_inference#readme"

[project.scripts]
qualiphide = "qualiphide.cli:main"

[tool.setuptools.packages.find]
include = ["qualiphide*"]

[tool.setuptools.package-data]
qualiphide = ["data/*.csv"]
